deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: energy-forecast-api
  namespace: energy-forecast
  labels:
    app.kubernetes.io/name: energy-forecast-pt
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: energy-forecast-pt
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
